# pyvista-cad

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSES.md  README.md  cspell.json  justfile  pyproject.toml
.github/workflows/: ci.yml  docs.yml
assets/: render_hero.py  render_readme.py
doc/: Makefile  conf.py  index.md  make.bat
doc/_static/: theme_overrides.css
doc/api/: index.rst
doc/user_guide/: cad_visualization.md  interop_with_build123d.md
examples/: README.rst
examples/01_readers/: README.rst  read_3mf.py  read_brep.py  read_dxf.py  read_fcstd.py  read_ifc.py  read_iges.py  read_scad.py  read_step.py
examples/02_writers/: README.rst  write_3mf.py  write_brep.py  write_dxf.py  write_step_faceted.py
examples/03_bridges/: README.rst  from_build123d_box.py  from_build123d_compound.py  from_cadquery_workplane.py  to_build123d.py  to_topods.py  via_gmsh.py
examples/04_metadata/: README.rst  assembly_tree_walk.py  color_aware_3mf.py  inspect_step_assembly.py  split_by_layer_dxf.py  units_and_conversion.py
examples/05_workflows/: README.rst  as_designed_vs_scan.py  cad_to_fea_tet_mesh.py  cad_to_signed_distance.py  parametric_to_3d_print.py
examples/06_advanced/: README.rst  cad_friendly_plot.py  custom_tessellation.py  ifc_to_unstructured_grid.py  multiblock_walk.py
src/pyvista_cad/: __init__.py  __init__.pyi  _accessor.py  _cad_view.py  _conversion.py  _errors.py  _metadata.py  _uri.py
src/pyvista_cad/_backends/: __init__.py  _build123d.py  _cascadio.py  _ezdxf.py  _freecad.py  _gltf.py  _ifcopenshell.py  _lib3mf.py  _openscad.py  _pyiges.py
src/pyvista_cad/_bridges/: __init__.py  build123d.py  cadquery.py  gmsh.py  topods.py
src/pyvista_cad/_readers/: __init__.py  brep.py  dxf.py  fcstd.py  gltf.py  ifc.py  iges.py  scad.py  step.py  three_mf.py
src/pyvista_cad/examples/: __init__.py  _generate.py  downloads.py
src/pyvista_cad/examples/data/: SOURCES.md  assembly.3mf  bracket.step  cube.step  drawing.dxf  plate.dxf  small_building.ifc
tests/: conftest.py  test_accessor.py  test_accessor_coverage.py  test_cad_view.py  test_cad_view_branches.py  test_conversion.py  test_coverage_contract.py  test_errors.py  test_examples.py  test_image_regression.py  test_lazy_imports.py  test_metadata.py  test_multiblock_methods.py  test_packaging_contract.py  test_plugin_registration.py  test_properties.py  test_uri_gate.py
tests/data/: README.md  _generate_fixtures.py  assembly_two_parts.step  building.ifc  dxf_r12.dxf  dxf_r2018.dxf  external.brep  impeller.iges  multimaterial.3mf
tests/perf/: conftest.py  test_3mf_read.py  test_dxf_read.py  test_import_cold.py  test_multiblock_walk.py  test_split_by_layer.py  test_step_read.py
tests/test_bridges/: test_bridge_paths.py  test_build123d.py  test_cadquery.py  test_gmsh.py  test_import_errors.py  test_topods.py
tests/test_readers/: test_brep.py  test_cascadio.py  test_dxf.py  test_fcstd.py  test_gltf.py  test_ifc.py  test_iges.py  test_scad.py  test_step.py  test_three_mf.py
tests/test_roundtrip/: test_brep_roundtrip.py  test_dxf_roundtrip.py  test_gltf_roundtrip.py  test_ifc_roundtrip.py  test_iges_roundtrip.py  test_step_roundtrip.py  test_three_mf_roundtrip.py
tests/test_writers/: test_brep.py  test_dxf.py  test_step.py  test_three_mf.py
